--- a/src/pages/componenets/Editor.css
+++ b/src/pages/componenets/Editor.css
@@ -122,6 +122,11 @@
     gap: 10px;
 }
 
+.remove-btn{
+    margin: 10px;
+    align-items: center;
+}
+
 /* ---------- Inputs ---------- */
 
 .editor-panel input,
